--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,8 +2,13 @@
 :root {
   --color-white: #fff;
   --color-black: #000;
-  --color-blue: #3543c3;
+  --color-blue: #6c77d6;
   --color-blueLight: #5a64c0;
+}
+
+* {
+  padding: 0;
+  margin: 0;
 }
 
 body {
@@ -11,23 +16,51 @@ body {
   color: var(--color-blue);
 }
 
-form > input {
+.register {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #242424;
+}
+
+.register__inner {
+  margin: 32px 0;
+}
+
+.register__hdl {
+  margin-bottom: 24px;
+}
+
+.register form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 500px;
+}
+
+.register form > input {
   display: block;
 }
 
-form input {
-  margin-bottom: 12px;
+.register form input {
   border: 1px solid var(--color-blue);
   border-radius: 3px;
-  height: 20px;
+  height: 35px;
 }
 
-form input:focus-visible {
+.register form input:focus-visible {
   outline-width: 2px;
   outline-color: var(--color-blue);
 }
 
-form input[type="submit"] {
+.register form input[type="submit"] {
   height: 40px;
   padding: 12px;
   border: none;
@@ -36,14 +69,20 @@ form input[type="submit"] {
   border-radius: 3px;
 }
 
-form input[type="submit"]:hover {
+.register form input[type="submit"]:hover {
   cursor: pointer;
   background-color: var(--color-blueLight);
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 
-form label {
+.register form input:not(:last-child) {
+  margin-bottom: 12px;
+  padding: 0 10px;
+}
+
+.register form label {
   font-size: 12px;
+  margin-bottom: 4px;
 }
 /*# sourceMappingURL=styles.css.map */
