--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,10 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,700;1,300&display=swap");
 
 :root {
   --color-white: #fff;
   --color-black: #000;
-  --color-blue: #6c77d6;
-  --color-blueLight: #5a64c0;
+  --color-blue: #e2a025;
+  --color-blueLight: #e2a02598;
+  --color-dark: rgb(29, 29, 29);
+  --color-dark2: rgb(71, 71, 71);
 }
 
 * {
@@ -13,21 +15,25 @@
 }
 
 body {
-  font-family: "Lato", sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   color: var(--color-blue);
+  background-color: var(--color-dark);
 }
 
 .register {
   display: flex;
   justify-content: center;
-  background-color: rgb(36, 36, 36);
 
   &__inner {
-    margin: 32px 0;
+    // margin: auto;
+    background-color: var(--color-dark2);
+    padding: 32px;
+    border-radius: 3px;
   }
 
   &__hdl {
     margin-bottom: 24px;
+    color: green;
   }
 
   form {
@@ -40,9 +46,11 @@ body {
 
     input {
       // margin-bottom: 12px;
+      background-color: transparent;
       border: 1px solid var(--color-blue);
       border-radius: 3px;
       height: 35px;
+      color: var(--color-white);
 
       &:focus-visible {
         outline-width: 2px;
@@ -73,6 +81,81 @@ body {
     label {
       font-size: 12px;
       margin-bottom: 4px;
+    }
+  }
+}
+
+// modal
+
+#btnModal {
+  padding: 10px;
+  border-radius: 3px;
+  border: none;
+  background-color: var(--color-blue);
+  color: var(--color-white);
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.modal {
+  &__container {
+    display: none;
+    z-index: 3;
+    padding-top: 100px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(70, 70, 70, 0.671);
+
+    &--open {
+      display: block;
+    }
+  }
+
+  &__content {
+    margin: auto;
+    background-color: #fff;
+    position: relative;
+    padding: 0;
+    outline: 0;
+    width: 600px;
+    padding: 20px;
+
+    h1 {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__close {
+    height: 30px;
+    width: 30px;
+    position: absolute;
+    right: 30px;
+
+    &::before,
+    &::after {
+      position: absolute;
+      left: 15px;
+      content: " ";
+      height: 33px;
+      width: 2px;
+      background-color: #333;
+    }
+
+    &::before {
+      transform: rotate(45deg);
+    }
+    &::after {
+      transform: rotate(-45deg);
+    }
+
+    &:hover {
+      cursor: pointer;
     }
   }
 }
